Hw03 testing (#8)
* Add module hw03 with new home work

* Modified hw03

* Fixes after review

* Add statis method run to TestRunner class.

* Move static method run to TestEnv class.

* Add messages about results of test execution.

* Make execution of statis method run